@@ -1087,7 +1087,7 @@ CREATE TABLE user_movies (
   id          INT(16) UNSIGNED               NOT NULL AUTO_INCREMENT,
   user_id INT(16)                        NOT NULL,
   imdbid      MEDIUMINT(7) UNSIGNED ZEROFILL NULL,
-  categoryid  VARCHAR(64)                    NULL DEFAULT NULL,
+  categories_id  VARCHAR(64)                    NULL DEFAULT NULL,
   createddate DATETIME                       NOT NULL,
   PRIMARY KEY (id),
   INDEX ix_usermovies_userid (user_id, imdbid)
@@ -1136,7 +1136,7 @@ CREATE TABLE user_series (
   id          INT(16) UNSIGNED NOT NULL AUTO_INCREMENT,
   user_id     INT(16)          NOT NULL,
   videos_id   INT(16)          NOT NULL COMMENT 'FK to videos.id',
-  categoryid  VARCHAR(64)      NULL DEFAULT NULL,
+  categories_id  VARCHAR(64)      NULL DEFAULT NULL,
   createddate DATETIME         NOT NULL,
   PRIMARY KEY (id),
   INDEX ix_userseries_videos_id (user_id, videos_id)
