@@ -40,7 +40,7 @@
 						<tr>
 							<td>
 								<a title="View details"
-								   href="{$smarty.const.WWW_TOP}/series/{$show.rageid}{if $show.categoryid != ''}?t={$show.categoryid|replace:"|":","}{/if}">{$show.releasetitle|escape:"htmlall"|wordwrap:75:"\n":true}</a>
+								   href="{$smarty.const.WWW_TOP}/series/{$show.rageid}{if $show.categories_id != ''}?t={$show.categories_id|replace:"|":","}{/if}">{$show.releasetitle|escape:"htmlall"|wordwrap:75:"\n":true}</a>
 							</td>
 							<td>
 								<span class="label label-default">{if $show.categoryNames != ''}{$show.categoryNames|escape:"htmlall"}{else}All{/if}</span>
