@@ -9,6 +9,7 @@ NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
 2016-06-27 DariusIII
+	Fix: Replace usage of categoryid with categories_id in user_series table, UserSeries class and Releases class and in themes.
 	Fix: Missed occurences of categoryid in UserMovies.php. Fixes issue #2191
 2016-06-27 niel
 	Mrg: dev => Latest-testing to prepare for updating stable 0.x.
